# SimpleRay

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  GameObject.cpp  GameObject.h  LightSource.cpp  LightSource.h  Makefile  Quaternion.cpp  Quaternion.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  bitmap.cpp  bitmap.hpp  main.cpp  pixel.cpp  pixel.hpp
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  LightSource.h  Quaternion.cpp  Quaternion.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector3.h  bitmap_image.hpp  main.cpp
